bk_ida/gccida/g0/plus_constant_wide
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:558:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+64h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:559:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+68h] [rbp-8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:577:25: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
l1 = ( unsigned __int64)xa[1]; 
                        ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:596:23: error: expected identifier or '('
 struct pool_constant = get_pool_constant( xa->fld[0].rtx); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:598:26: error: use of undeclared identifier 'machine_mode'
tem = force_const_mem( ( machine_mode)*( ( unsigned __int8 *)xa + 2), v5); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:599:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)tem + 2), tem->fld[0].rtx) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/explow.c:611:32: error: use of undeclared identifier 'machine_mode'
ca = trunc_int_for_mode( ca, ( machine_mode)*( ( unsigned __int8 *)xa + 2)); 
                               ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/plus_constant_wide/src/obj/explow.o] Error 1
